--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy
 on:  
   workflow_dispatch:
   schedule:
-  - cron: '15 09 * * *'  #every day at 2:45 pm IST
+  - cron: '0 5 * * *'  #every day at 10:30 am IST
 
 jobs:
   deploy:
